fix: Documentação de rota de recuperar produto por id.
